--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 body {
+    margin: 0;
     color: white;
     display: flex;
     flex-direction: column;
@@ -28,9 +29,20 @@ canvas {
     justify-content: center;
 }
 
-/* Smartphones with --- */
-@media only screen and (max-width: 760px) {
+/* Smartphones width --- */
+@media only screen and (max-width: 720px) {
     canvas {
         width: 100%;
+    }
+}
+
+/* Smartphones height --- */
+@media only screen and (max-height: 480px) {
+    h1 {
+        display: none;
+    }
+
+    canvas {
+        height: 100vh;
     }
 }
