--- a/style.css
+++ b/style.css
@@ -46,3 +46,29 @@ canvas {
         height: 100vh;
     }
 }
+
+.description {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 720px;
+    justify-content: space-evenly;
+}
+
+.keys {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.keys img {
+    height: 35px;
+}
+
+.keys p {
+    font-size: 26px;
+    margin-right: 5px;
+}
