--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
         /* Safari, Android, iOS */
 }
 
+@font-face {
+    font-family: 'pixelify';
+    src: url('fonts/PixelifySans-VariableFont_wght.ttf') format('truetype'),
+        /* Safari, Android, iOS */
+}
+
 body {
     margin: 0;
     color: white;
@@ -17,9 +23,24 @@ body {
     font-family: 'creepster', Arial, Helvetica, sans-serif;
 }
 
+.d-none {
+    display: none;
+}
+
+.visible {
+    visibility: visible;
+    display: flex;
+}
+
+.hidden {
+    visibility: hidden;
+    display: flex;
+}
+
 h1 {
-    padding-bottom: 50px;
+    padding-bottom: 33px;
     margin-block-start: 0;
+    margin-block-end: 0;
     font-size: 60px;
 }
 
@@ -30,31 +51,69 @@ canvas {
     justify-content: center;
 }
 
+.title-and-canvas {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#symbols {
+    position: absolute;
+    top: 312px;
+    right: 190px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    z-index: 999 !important;
+    cursor: pointer;
+}
+
+#symbols img {
+    width: 40px;
+    height: 40px;
+}
+
 #startscreen {
     display: flex;
     flex-direction: column;
-    height: 500px;
-    width: 750px;
-    padding: 20px;
+    height: 480px;
+    width: 720px;
+    /* padding: 20px; */
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    background-image: linear-gradient(180deg, rgba(2, 0, 36, 0.9) 15%, rgba(1, 29, 135, 0.9) 50%, rgba(21, 62, 122, 0.9) 70%, rgba(34, 64, 97, 0.9) 100%);
+    transform: translate(-50%, -48%);
+    background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
 }
 
 .upper-startscreen {
     display: flex;
     height: 100%;
     flex-direction: row;
-    padding: 10px;
+    padding: 10px 20px 0 20px;
+}
+
+.upper-startscreen h2 {
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+    font-family: 'pixelify';
+}
+
+.lower-startscreen-left h2 {
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+    font-family: 'pixelify';
 }
 
 .lower-startscreen {
     display: flex;
     height: 100%;
     flex-direction: row;
-    padding: 10px;
+    padding: 10px 20px 20px 20px;
 }
 
 .upper-startscreen-left {
@@ -74,11 +133,14 @@ canvas {
 .upper-startscreen-right p {
     margin-block-start: 0em;
     margin-block-end: 0em;
+    font-family: 'pixelify';
+    font-size: 15px;
 }
 
 table {
     border-collapse: collapse;
     width: 100%;
+    font-family: 'pixelify';
 }
 
 table,
@@ -157,7 +219,7 @@ table td img {
     flex-direction: row;
     align-items: center;
     width: 720px;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 .keys {
@@ -176,4 +238,5 @@ table td img {
 .keys p {
     font-size: 26px;
     margin-right: 5px;
+    font-family: 'pixelify';
 }
