--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ canvas {
 }
 
 .title-and-canvas {
+    position: relative; 
     display: flex;
     align-content: center;
     justify-content: center;
@@ -61,20 +62,28 @@ canvas {
 
 #symbols {
     position: absolute;
-    top: 312px;
-    right: 190px;
+    top: 120px;
+    right: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 8px;
-    z-index: 999 !important;
+    z-index: 10 !important;
     cursor: pointer;
 }
 
 #symbols img {
     width: 40px;
     height: 40px;
+}
+
+.title-and-canvas:fullscreen #symbols,
+.title-and-canvas:-webkit-full-screen #symbols,
+.title-and-canvas:-moz-full-screen #symbols,
+.title-and-canvas:-ms-fullscreen #symbols {
+    top: 130px; /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
+    right: 130px; /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
 }
 
 #startscreen {
