added d-none to description when in mobile mode - does not work yet;

--- a/style.css
+++ b/style.css
@@ -210,6 +210,10 @@ table td img {
     canvas {
         width: 100%;
     }
+
+    .description {
+        display: none;
+    }
 }
 
 /* Smartphones height --- */
@@ -220,6 +224,10 @@ table td img {
 
     canvas {
         height: 100vh;
+    }
+
+    .description {
+        display: none;
     }
 }
 
