--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .d-none {
-    display: none;
+    display: none !important;
 }
 
 .visible {
@@ -51,8 +51,8 @@ canvas {
     justify-content: center;
 }
 
-.title-and-canvas {
-    position: relative; 
+.titleandcanvas {
+    position: relative;
     display: flex;
     align-content: center;
     justify-content: center;
@@ -78,13 +78,17 @@ canvas {
     height: 40px;
 }
 
-.title-and-canvas:fullscreen #symbols,
-.title-and-canvas:-webkit-full-screen #symbols,
-.title-and-canvas:-moz-full-screen #symbols,
-.title-and-canvas:-ms-fullscreen #symbols {
-    top: 130px; /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
-    right: 130px; /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
+.titleandcanvas:fullscreen #symbols,
+.titleandcanvas:-webkit-full-screen #symbols,
+.titleandcanvas:-moz-full-screen #symbols,
+.titleandcanvas:-ms-fullscreen #symbols {
+    top: 130px;
+    /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
+    right: 130px;
+    /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
 }
+
+/* -- STARTSCREEN -- */
 
 #startscreen {
     display: flex;
@@ -205,6 +209,155 @@ table td img {
     font-size: 48px;
 }
 
+/* -- ENDSCREEN -- */
+
+.endscreen {
+    display: flex;
+    flex-direction: column;
+    height: 480px;
+    width: 720px;
+    /* padding: 20px; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -48%);
+    background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%)
+}
+
+#victory {
+    display: flex;
+    flex-direction: column;
+    height: 480px;
+    width: 720px;
+    /* padding: 20px; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -48%);
+    background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
+}
+
+.upper-victory-screen {
+    display: flex;
+    height: 60%;
+    padding: 10px 40px 0 40px;
+    align-items: center;
+    justify-content: space-between;
+    gap: 12px;
+    align-content: center;
+    flex-wrap: nowrap;
+}
+
+.upper-victory-screen h2 {
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+    font-family: 'pixelify';
+    font-size: 24px;
+}
+
+.lower-victory-screen-left h2 {
+    margin-block-start: 0.3em;
+    margin-block-end: 0.3em;
+    font-family: 'pixelify';
+}
+
+.lower-victory-screen {
+    display: flex;
+    height: 40%;
+    flex-direction: row;
+    padding: 10px 20px 20px 20px;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.upper-victory-screen-left {
+    min-width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.upper-victory-screen-right {
+    min-width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.upper-victory-screen-right p {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    font-family: 'pixelify';
+    font-size: 15px;
+}
+
+#victoryButton {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+    font-family: 'creepster';
+    font-size: 48px;
+}
+
+#victoryButton:hover {
+    background-color: white;
+    color: black;
+}
+
+.defeat {
+    display: flex;
+    flex-direction: column;
+    height: 480px;
+    width: 720px;
+    /* padding: 20px; */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -48%);
+    background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.defeat h2 {
+    padding: 20px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    font-size: 40px;
+}
+
+.defeat p {
+    padding: 40px;
+    font-family: 'pixelify';
+    font-size: 20px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+
+#defeatButton {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+    font-family: 'creepster';
+    font-size: 48px;
+}
+
+#defeatButton:hover {
+    background-color: white;
+    color: black;
+}
+
 /* Smartphones width --- */
 @media only screen and (max-width: 720px) {
     h1 {
@@ -234,6 +387,8 @@ table td img {
         display: none !important;
     }
 }
+
+/* -- DESCRIPTION -- */
 
 .description {
     display: flex;
