--- a/style.css
+++ b/style.css
@@ -216,12 +216,15 @@ table td img {
     flex-direction: column;
     height: 480px;
     width: 720px;
-    /* padding: 20px; */
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -48%);
-    background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%)
+    background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: nowrap;
 }
 
 #victory {
@@ -330,7 +333,8 @@ table td img {
     padding: 20px;
     margin-block-start: 0em;
     margin-block-end: 0em;
-    font-size: 40px;
+    font-size: 50px;
+    letter-spacing: 3px;
 }
 
 .defeat p {
@@ -339,11 +343,12 @@ table td img {
     font-size: 20px;
     margin-block-start: 0em;
     margin-block-end: 0em;
+    text-align: center;
 }
 
 #defeatButton {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    padding: 10px;
     border: none;
     background-color: transparent;
     color: white;
