--- a/style.css
+++ b/style.css
@@ -27,42 +27,35 @@ body {
     display: none !important;
 }
 
-.visible {
-    visibility: visible;
-    display: flex;
-}
-
-.hidden {
-    visibility: hidden;
-    display: flex;
-}
-
-h1 {
-    padding-bottom: 33px;
+.title {
     margin-block-start: 0;
     margin-block-end: 0;
     font-size: 60px;
+    position: absolute;
+    top: -100px;
+    z-index: 20;
+    text-align: center;
 }
 
 canvas {
+    position: relative;
     background-color: black;
     display: block;
     align-items: center;
     justify-content: center;
 }
 
-.titleandcanvas {
-    position: relative;
+.game {
     display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    position: relative;
 }
 
 #symbols {
     position: absolute;
-    top: 120px;
+    top: 20px;
     right: 20px;
     display: flex;
     flex-direction: column;
@@ -78,14 +71,12 @@ canvas {
     height: 40px;
 }
 
-.titleandcanvas:fullscreen #symbols,
-.titleandcanvas:-webkit-full-screen #symbols,
-.titleandcanvas:-moz-full-screen #symbols,
-.titleandcanvas:-ms-fullscreen #symbols {
+#canvas:fullscreen #symbols,
+#canvas:-webkit-full-screen #symbols,
+#canvas:-moz-full-screen #symbols,
+#canvas:-ms-fullscreen #symbols {
     top: 130px;
-    /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
     right: 130px;
-    /* oder einen anderen Wert, der im Vollbildmodus funktioniert */
 }
 
 /* -- STARTSCREEN -- */
@@ -95,9 +86,8 @@ canvas {
     flex-direction: column;
     height: 480px;
     width: 720px;
-    /* padding: 20px; */
-    position: fixed;
-    top: 50%;
+    position: absolute;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -48%);
     background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
@@ -169,9 +159,7 @@ td {
 table td img {
     max-width: 172px;
     max-height: 32px;
-    /* Begrenzt die maximale Höhe der Bilder auf 100px */
     display: block;
-    /* Verhindert, dass am Bildrand zusätzlicher Platz entsteht */
 }
 
 .lower-startscreen-left {
@@ -211,13 +199,13 @@ table td img {
 
 /* -- ENDSCREEN -- */
 
-.endscreen {
+#endscreen {
     display: flex;
     flex-direction: column;
     height: 480px;
     width: 720px;
-    position: fixed;
-    top: 50%;
+    position: absolute;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -48%);
     background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
@@ -232,7 +220,6 @@ table td img {
     flex-direction: column;
     height: 480px;
     width: 720px;
-    /* padding: 20px; */
     position: fixed;
     top: 50%;
     left: 50%;
@@ -317,7 +304,6 @@ table td img {
     flex-direction: column;
     height: 480px;
     width: 720px;
-    /* padding: 20px; */
     position: fixed;
     top: 50%;
     left: 50%;
@@ -365,7 +351,7 @@ table td img {
 
 /* Smartphones width --- */
 @media only screen and (max-width: 720px) {
-    h1 {
+    .title {
         display: none !important;
     }
 
@@ -376,11 +362,19 @@ table td img {
     .description {
         display: none !important;
     }
+
+    #startscreen {
+        width: 100%;
+    }
+
+    #endscreen {
+        width: 100%;
+    }
 }
 
 /* Smartphones height --- */
 @media only screen and (max-height: 480px) {
-    h1 {
+    .title {
         display: none !important;
     }
 
@@ -390,6 +384,14 @@ table td img {
 
     .description {
         display: none !important;
+    }
+
+    #startscreen {
+        height: 100vh;
+    }
+
+    #endscreen {
+        height: 100vh;
     }
 }
 
