--- a/style.css
+++ b/style.css
@@ -349,6 +349,20 @@ table td img {
     color: black;
 }
 
+.mobile-buttons {
+    width: 100%;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    display: none;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 8px;
+    z-index: 10 !important;
+    cursor: pointer;
+}
+
 /* Smartphones width --- */
 @media only screen and (max-width: 720px) {
     .title {
@@ -363,12 +377,28 @@ table td img {
         display: none !important;
     }
 
+    .mobile-buttons {
+        display: flex;
+    }
+
+    .mobile-buttons img {
+        height: 6vw;
+        min-height: 20px; 
+    }
+
     #startscreen {
         width: 100%;
     }
 
     #endscreen {
         width: 100%;
+    }
+
+    #symbols img {
+        width: 6vw; 
+        height: 6vw;
+        min-width: 25px; 
+        min-height: 25px;
     }
 }
 
@@ -386,12 +416,28 @@ table td img {
         display: none !important;
     }
 
+    .mobile-buttons {
+        display: flex; 
+    }
+
+    .mobile-buttons img {
+        height: 6vw;
+        min-height: 20px; 
+    }
+
     #startscreen {
         height: 100vh;
     }
 
     #endscreen {
         height: 100vh;
+    }
+
+    #symbols img {
+        width: 8vw; 
+        height: 8vw;
+        min-width: 20px; 
+        min-height: 20px;
     }
 }
 
