--- a/style.css
+++ b/style.css
@@ -10,21 +10,29 @@
         /* Safari, Android, iOS */
 }
 
-body {
+body, html {
     margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
     color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    background-image: url('img2/5_background/cemetary_04.jpg');
+    background-image: url(img2/5_background/cemetary_04.jpg);
     background-size: cover;
-    height: 100vh;
     font-family: 'creepster', Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
 .d-none {
     display: none !important;
+}
+
+.absolute {
+    position: absolute;
 }
 
 .title {
@@ -32,12 +40,16 @@ body {
     margin-block-end: 0;
     font-size: 60px;
     position: absolute;
-    top: -100px;
+    top: -80px;
     z-index: 20;
     text-align: center;
+    letter-spacing: 2px;
 }
 
 canvas {
+    max-width: 720px;
+    width: 100dvw;
+    aspect-ratio: 720 / 480;
     position: relative;
     background-color: black;
     display: block;
@@ -47,10 +59,12 @@ canvas {
 
 .game {
     display: flex;
-    flex-direction: column; 
-    justify-content: center; 
-    align-items: center; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
+    flex-wrap: nowrap;
+    align-content: center;
 }
 
 #symbols {
@@ -84,8 +98,11 @@ canvas {
 #startscreen {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     height: 480px;
-    width: 720px;
+    max-width: 720px;
+    width: 100dvw;
+    aspect-ratio: 720 / 480;
     position: absolute;
     top: 48%;
     left: 50%;
@@ -153,7 +170,7 @@ td {
 
 td {
     padding: 5px 0px 5px 0px;
-    width: 40px;
+    width: 35px;
 }
 
 table td img {
@@ -203,7 +220,10 @@ table td img {
     display: flex;
     flex-direction: column;
     height: 480px;
-    width: 720px;
+    max-width: 720px;
+    width: 100dvw;
+    margin: 0 auto;
+    aspect-ratio: 720 / 480;
     position: absolute;
     top: 48%;
     left: 50%;
@@ -225,6 +245,9 @@ table td img {
     left: 50%;
     transform: translate(-50%, -48%);
     background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .upper-victory-screen {
@@ -350,17 +373,35 @@ table td img {
 }
 
 .mobilebuttons {
-    width: 100%;
     position: absolute;
-    bottom: 20px;
+    display: flex;
+    bottom: 15px;
     left: 20px;
-    display: none;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
-    gap: 8px;
+    gap: 22px;
     z-index: 10 !important;
     cursor: pointer;
+}
+
+#rotateDeviceMessage {
+    display: none;
+    position: absolute;
+    height: auto;
+    z-index: 30;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+#rotateDeviceMessage img {
+    width: 100%;
+}
+
+canvas, #startscreen, #endscreen, #rotateDeviceMessage {
+    aspect-ratio: 720 / 480;
 }
 
 /* Smartphones width --- */
@@ -369,36 +410,160 @@ table td img {
         display: none !important;
     }
 
-    canvas {
-        width: 100%;
-    }
-
-    .description {
-        display: none !important;
-    }
-
-    .mobilebuttons {
-        display: flex;
+    canvas,
+    #startscreen,
+    #endscreen,
+    #rotateDeviceMessage {
+        width: 100dvw;
+        max-width: 720px;
+        height: auto;
     }
 
     .mobilebuttons img {
         height: 6vw;
-        min-height: 20px; 
-    }
-
-    #startscreen {
-        width: 100%;
-    }
-
-    #endscreen {
-        width: 100%;
+        min-height: 20px;
     }
 
     #symbols img {
-        width: 6vw; 
+        width: 6vw;
         height: 6vw;
-        min-width: 25px; 
+        min-width: 25px;
         min-height: 25px;
+    }
+
+    #startscreen h2 {
+        font-size: 4vw; 
+    }
+    #startscreen p {
+        font-size: 2vw; 
+    }
+    #startscreen img {
+        width: auto; 
+        height: 8vw;
+    }
+    #startscreen table {
+        font-size: 4vw;
+    }
+    #startscreen button {
+        font-size: 8vw;
+        padding: 1vw 2vw;
+    }
+    #startscreen button p {
+        font-size: 4vw;
+    }
+    .upper-startscreen {
+        height: auto;
+        padding: 0px 20px 0px 20px;
+    }
+    .lower-startscreen {
+        height: auto;
+        padding: 0px 20px 0px 20px;
+    }
+
+    #endscreen {
+        overflow-x: hidden;
+    }
+    #endscreen h2 {
+        font-size: 5vw; 
+    }
+    #endscreen p {
+        font-size: 2vw; 
+    }
+    .defeat p {
+        padding: 10px 110px 10px 110px;
+    }
+    #endscreen img {
+        width: auto; 
+        height: 28vw;
+    }
+    #endscreen button {
+        font-size: 5vw;
+        padding: 1vw 2vw;
+    }
+
+    .victory {
+        height: auto;
+        width: 100%;
+    }
+
+    .upper-victory-screen {
+        padding: 10px 40px 0 40px;
+        height: auto;
+    }
+
+    .upper-victory-screen-right {
+        min-width: 60%;
+        height: auto;
+    }
+
+    .lower-victory-screen {
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 520px) {
+    #symbols img {
+        width: 5vw;
+        height: 5vw;
+        min-width: 20px;
+        min-height: 20px;
+    }
+
+    #startscreen h2 {
+        font-size: 6vw; 
+    }
+    #startscreen p {
+        font-size: 2vw; 
+    }
+    #startscreen img {
+        width: auto; 
+        height: 5vw;
+    }
+    #startscreen table {
+        font-size: 4vw;
+    }
+    #startscreen button {
+        font-size: 4vw;
+        padding: 1vw 2vw;
+    }
+    #startscreen button p {
+        font-size: 4vw;
+    }
+    .upper-startscreen {
+        height: auto;
+    }
+    .lower-startscreen {
+        height: auto;
+    }
+
+    #endscreen {
+        overflow-x: hidden;
+    }
+    #endscreen h2 {
+        font-size: 5vw; 
+    }
+    #endscreen p {
+        font-size: 2vw; 
+    }
+    .defeat h2 {
+        padding: 10px;
+    }
+    .defeat p {
+        padding: 0 200px 10px 200px;
+    }
+    #endscreen img {
+        width: auto; 
+        height: 110px;
+    }
+    #endscreen button {
+        font-size: 6vw;
+        padding: 1vw 2vw;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .defeat p {
+        padding: 0 260px 10px 260px;
     }
 }
 
@@ -408,35 +573,15 @@ table td img {
         display: none !important;
     }
 
-    canvas {
-        height: 100vh;
-    }
-
-    .description {
-        display: none !important;
-    }
-
-    .mobilebuttons {
-        display: flex;
-    }
-
     .mobilebuttons img {
         height: 6vw;
-        min-height: 20px; 
-    }
-
-    #startscreen {
-        height: 100vh;
-    }
-
-    #endscreen {
-        height: 100vh;
+        min-height: 20px;
     }
 
     #symbols img {
-        width: 8vw; 
-        height: 8vw;
-        min-width: 20px; 
+        width: 6vw;
+        height: 6vw;
+        min-width: 20px;
         min-height: 20px;
     }
 }
