--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ table td img {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -48%);
+    transform: translate(-50%, -50%);
     background-image: linear-gradient(180deg, rgba(2, 0, 36, 1) 15%, rgba(1, 29, 135, 1) 50%, rgba(21, 62, 122, 1) 70%, rgba(34, 64, 97, 1) 100%);
     justify-content: center;
     align-items: center;
@@ -276,6 +276,7 @@ table td img {
 
 .lower-victory-screen {
     display: flex;
+    width: 90%;
     height: 40%;
     flex-direction: row;
     padding: 10px 20px 20px 20px;
