--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html {
 
 canvas {
     max-width: 720px;
-    width: 100dvw;
+    /* width: 100dvw; */
     aspect-ratio: 720 / 480;
     position: relative;
     background-color: black;
@@ -66,6 +66,7 @@ canvas {
     position: relative;
     flex-wrap: nowrap;
     align-content: center;
+    overflow: hidden;
 }
 
 #symbols {
@@ -626,6 +627,16 @@ canvas,
         min-width: 20px;
         min-height: 20px;
     }
+
+    canvas,
+    #startscreen,
+    #endscreen,
+    #rotateDeviceMessage {
+        height: 400px;
+        width: 100dvw;
+        max-width: 720px;
+        height: auto;
+    }
 }
 
 /* -- DESCRIPTION -- */
@@ -655,4 +666,6 @@ canvas,
     font-size: 26px;
     margin-right: 5px;
     font-family: 'pixelify';
+    margin-block-start: 0em;
+    margin-block-end: 0em;
 }
