--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ canvas {
     position: relative;
     flex-wrap: nowrap;
     align-content: center;
-    overflow: hidden;
 }
 
 #symbols {
@@ -616,6 +615,9 @@ canvas,
         display: none !important;
     }
 
+    .game {
+        aspect-ratio: 720 / 480;
+    }
     .mobilebuttons img {
         height: 5vw;
         min-height: 20px;
@@ -628,7 +630,7 @@ canvas,
         min-height: 20px;
     }
 
-    canvas,
+    /* canvas,
     #startscreen,
     #endscreen,
     #rotateDeviceMessage {
@@ -636,7 +638,7 @@ canvas,
         width: 100dvw;
         max-width: 720px;
         height: auto;
-    }
+    } */
 }
 
 /* -- DESCRIPTION -- */
