index: changed id of toggle Fullscreen; style.css: optimised design for mobile devices height; game.js: changed toggleFullscreen to put whole document into fullscreen, not just the canvas, therefore symbols are added to the fullscreen canvas; character: changed speed; cloud: changed intervall speed; movable-object: changed speed from 0.15 to 1;

--- a/style.css
+++ b/style.css
@@ -377,14 +377,25 @@ table td img {
 .mobilebuttons {
     position: absolute;
     display: flex;
+    width: 90%;
     bottom: 15px;
-    left: 20px;
+    padding-left: 5%;
+    padding-right: 5%;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    gap: 22px;
     z-index: 10 !important;
     cursor: pointer;
+}
+
+.mobilebuttons-left {
+    display: flex;
+    gap: 15px;
+}
+
+.mobilebuttons-right {
+    display: flex;
+    gap: 15px;
 }
 
 #rotateDeviceMessage {
@@ -409,7 +420,7 @@ canvas,
     aspect-ratio: 720 / 480;
 }
 
-/* Smartphones width --- */
+/* -- Smartphones width -- */
 @media only screen and (max-width: 720px) {
     .title {
         display: none !important;
@@ -422,6 +433,7 @@ canvas,
         width: 100dvw;
         max-width: 720px;
         height: auto;
+        justify-content: space-evenly;
     }
 
     .mobilebuttons img {
@@ -441,7 +453,7 @@ canvas,
     }
 
     #startscreen p {
-        font-size: 2vw;
+        font-size: 1.7vw;
     }
 
     #startscreen img {
@@ -538,7 +550,7 @@ canvas,
     }
 
     #startscreen p {
-        font-size: 2vw;
+        font-size: 1.7vw;
     }
 
     #startscreen img {
@@ -609,15 +621,37 @@ canvas,
     }
 }
 
-/* Smartphones height --- */
-@media only screen and (max-height: 480px) {
+/* -- Smartphones height -- */
+
+@media only screen and (max-height: 510px) {
+    .title {
+        display: none !important;
+    }
+}
+
+@media only screen and (max-height: 479px) {
     .title {
         display: none !important;
     }
 
+    canvas,
+    #startscreen,
+    #endscreen {
+        height: 100vh;
+        width: auto;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        overflow: hidden;
+    }
+
     .game {
         aspect-ratio: 720 / 480;
+        height: 100vh;
+        width: auto;
     }
+
     .mobilebuttons img {
         height: 5vw;
         min-height: 20px;
@@ -630,15 +664,240 @@ canvas,
         min-height: 20px;
     }
 
-    /* canvas,
-    #startscreen,
-    #endscreen,
-    #rotateDeviceMessage {
-        height: 400px;
-        width: 100dvw;
-        max-width: 720px;
+    .upper-startscreen-right p {
+        font-size: 13px;
+    }
+
+    .lower-startscreen {
+        padding: 0px 20px 0px 20px;
+    }
+
+    .lower-startscreen-left img {
+        height: 80px;
+        width: auto;
+    }
+
+    .lower-startscreen-right p {
+        margin-block-start: 0em;
+        margin-block-end: 0em;
+    }
+
+    .defeat p {
+        padding: 20px;
+        width: 70%;
+        font-size: 16px;
+    }
+
+    .defeat h2 {
+        font-size: 40px;
+    }
+
+    #defeatButton {
+        font-size: 44px;
+    }
+
+    #victory {
         height: auto;
-    } */
+    }
+
+    .upper-victory-screen {
+        padding: 10px 30px 40px 25px;
+        width: 70%;
+        height: 70%;
+    }
+
+    .upper-victory-screen-left {
+        width: 20%;
+    }
+
+    .upper-victory-screen-right {
+        width: 80%;
+    }
+
+    .upper-victory-screen-right p {
+        font-size: 12px;
+    }
+
+    .lower-victory-screen {
+        height: 30%;
+        width: 70%;
+    }
+
+    #victorybutton {
+        font-size: 42px;
+    }
+}
+
+@media only screen and (max-height: 399px) {
+
+    .upper-startscreen-right p {
+        font-size: 11px;
+    }
+
+    .lower-startscreen {
+        padding: 0px 20px 0px 20px;
+    }
+
+    .lower-startscreen-left img {
+        height: 60px;
+    }
+
+    #victory {
+        height: auto;
+    }
+
+    .upper-victory-screen {
+        padding: 10px 30px 10px 25px;
+        width: 60%;
+        height: 80%;
+    }
+
+    .upper-victory-screen-left {
+        width: 20%;
+    }
+
+    .upper-victory-screen-right {
+        width: 80%;
+    }
+
+    .upper-victory-screen-right p {
+        font-size: 12px;
+    }
+
+    .upper-victory-screen h2 {
+        font-size: 22px;
+    }
+
+    .lower-victory-screen {
+        height: 20%;
+        width: 60%;
+    }
+
+    #victoryButton {
+        font-size: 42px;
+    }
+}
+
+@media only screen and (max-height: 355px) {
+
+    .upper-startscreen-right p {
+        font-size: 10px;
+    }
+
+    .lower-startscreen {
+        padding: 0px 20px 0px 20px;
+    }
+
+    #startButton p {
+        font-size: 40px;
+    }
+
+    td {
+        padding: 3px 0px 3px 0px;
+    }
+
+    .lower-startscreen-left img {
+        height: 52px;
+    }
+
+    .mobilebuttons img {
+        height: 4vw;
+    }
+
+    #symbols img {
+        width: 5vw;
+        height: 5vw;
+    }
+
+    .defeat p {
+        padding: 10px 20px 10px 20px;
+        width: 50%;
+        font-size: 14px;
+    }
+
+    .defeat h2 {
+        padding: 0px 20px 10px 20px;
+        font-size: 34px;
+    }
+
+    #defeatButton {
+        font-size: 40px;
+        width: 60%;
+    }
+
+    #victory {
+        height: auto;
+    }
+
+    .upper-victory-screen {
+        padding: 10px 30px 10px 25px;
+        width: 50%;
+        height: 80%;
+    }
+
+    .upper-victory-screen-left {
+        width: 20%;
+    }
+
+    .upper-victory-screen-right {
+        width: 80%;
+    }
+
+    .upper-victory-screen-right p {
+        font-size: 10px;
+    }
+
+    .upper-victory-screen h2 {
+        font-size: 18px;
+    }
+
+    .lower-victory-screen {
+        height: 20%;
+        width: 60%;
+    }
+
+    #victoryButton {
+        font-size: 36px;
+    }
+}
+
+@media only screen and (max-height: 300px) {
+    .upper-startscreen {
+        height: 50%;
+    }
+
+    .upper-startscreen-right p {
+        font-size: 8px;
+    }
+
+    table td img {
+        max-height: 25px;
+    }
+
+    .lower-startscreen {
+        padding: 0px 20px 0px 20px;
+    }
+
+    #startButton p {
+        font-size: 40px;
+    }
+
+    td {
+        padding: 3px 0px 3px 0px;
+    }
+
+    .lower-startscreen-left img {
+        height: 52px;
+    }
+
+    .mobilebuttons img {
+        height: 3vw;
+    }
+
+    #symbols img {
+        width: 4vw;
+        height: 4vw;
+    }
 }
 
 /* -- DESCRIPTION -- */
